Note discussions URL for #100, and format header

--- a/docs/spep-0100.markdown
+++ b/docs/spep-0100.markdown
@@ -1,7 +1,8 @@
 SPEP 100: Creating SimplePie_Feed
 =================================
-Status: Draft
-Type: Standards Track
+- Status: Draft
+- Type: Standards Track
+- Discussions-To: simplepie-support@yahoogroups.com
 
 ## Rationale
 This SPEP proposes splitting the existing feed-level methods from
